feat: gpt-image-2 pipeline, CHAIN mode, image render params & URL fix
Backend:
- OpenAiService: structured JSON room analysis (GPT-4o vision) + 3-section
  editing prompt (150-250w) + gpt-image-2 full param support (size, quality,
  format, compression, background); dedicated WebClient with 360s timeout
- QwenService: CHAIN mode — 3-step chain-of-thought analysis via qwen-vl-max,
  parses [IMAGE_PROMPT] block, fallback to CREATIVE on error
- AiOrchestrationService: wires CHAIN/ChatGPT branches, passes all 5 render
  params through the pipeline
- Project entity + DTO + controller: imageSize, imageQuality, imageFormat,
  imageCompression, imageBackground fields
- StorageController: serves local dev images at /api/v1/storage/{key}
- WebClientConfig: buffer 20 MB; AppConfig: ObjectMapper bean
- Flyway V2-V10: incremental schema migrations for all new columns
- application.yml: validate-on-migrate false, gpt-image-2 model config

Mobile:
- UploadScreen: ChatGPT-only render params section (size/quality/format/
  compression/background selectors, OpenAI green theme)
- ResultScreen + ProjectCard: normalizeImageUrl() replaces localhost with
  server LAN IP so images load on physical devices/emulators
- projectService: ImageSize/Quality/Format/Background types + 5 new params
- api.ts: normalizeImageUrl() utility exported for URL rewriting

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>